Adding higher logger error

--- a/backend/radioco/main/templates/main/snippets/footer.html
+++ b/backend/radioco/main/templates/main/snippets/footer.html
@@ -17,10 +17,10 @@
                         </ul>
 
                         <br>
-                        <a href="https://www.facebook.com/radioco.org/" target="_blank" title="Facebook"> <i
+                        <a href="https://www.facebook.com/radioco.org/" target="_blank" title="Facebook" rel="noopener"> <i
                                 class="fab fa-facebook-square fa-2x"></i></a>
 
-                        <a href="https://twitter.com/radioco_org" target="_blank" title="Twitter"> <i
+                        <a href="https://twitter.com/radioco_org" target="_blank" title="Twitter" rel="noopener"> <i
                                 class="fab fa-twitter-square fa-2x"></i></a></div>
                 </div>
             </div><!--/.col-sm-3-->
@@ -45,9 +45,9 @@
                             data-recalc-dims="1"></a></p>
                         <p>
                             {% trans "This work by" %}
-                            <a href="https://www.linkedin.com/in/iagovelosoabalo/">Iago Veloso Abalo</a>
+                            <a href="https://www.linkedin.com/in/iagovelosoabalo/" target="_blank" rel="noopener">Iago Veloso Abalo</a>
                             {% trans "is licensed under a" %}
-                            <a href="http://creativecommons.org/licenses/by/4.0/">{% trans "Creative Commons Attribution 4.0 International License" %}</a>.
+                            <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener">{% trans "Creative Commons Attribution 4.0 International License" %}</a>.
                         </p>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                 <p class="copyright">
                     <span data-customizer="copyright-credit">
                         {% trans "Template:" %}
-                        <a href="https://github.com/puikinsh/illdy" title="Illdy" target="_blank">Illdy</a>.
+                        <a href="https://github.com/puikinsh/illdy" title="Illdy" target="_blank" rel="noopener">Illdy</a>.
                     </span>
                 </p>
                 <span>{% trans "Project" %}: RadioCo.</span>
