Adding translation links

--- a/backend/radioco/main/templates/main/about.html
+++ b/backend/radioco/main/templates/main/about.html
@@ -36,6 +36,16 @@
                         community.
                         {% endblocktrans %}
                     </p>
+                    <p>
+                        {% trans "Help us translate RadioCo into your language!" %}
+                    </p>
+                    <a href="https://poeditor.com/join/project/wc3P8dCind" target="_blank" title="Help Translate" rel="noopener">
+                        {% trans "Official Website" %}
+                    </a>
+                    |
+                    <a href="https://poeditor.com/join/project/Ofdy6SyZwI" target="_blank" title="Help Translate" rel="noopener">
+                        {% trans "RadioCo project" %}
+                    </a>
                 </div>
             </div>
         </div>
