--- a/backend/radioco/main/templates/main/base.html
+++ b/backend/radioco/main/templates/main/base.html
@@ -4,29 +4,8 @@
 {% get_current_language as LANGUAGE_CODE %}
 
 <!DOCTYPE html>
-<html lang="es-ES" prefix="og: http://ogp.me/ns#">
+<html lang="{{ LANGUAGE_CODE }}" prefix="og: http://ogp.me/ns#">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Inicio &gt; RadioCo</title>
-
-    <link rel="icon" type="image/png" href="{% static 'main/favicon.ico' %}">
-
-    {% for lang_code, lang_name in languages %}
-        {% language lang_code %}
-            <meta property="og:locale{% if lang_code != LANGUAGE_CODE %}:alternate{% endif %}" content="{{ lang_code }}"/>
-        {% endlanguage %}
-    {% endfor %}
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Inicio &gt; RadioCo"/>
-    <meta property="og:url" content="http://radioco.org/inicio/"/>
-    <meta property="og:site_name" content="RadioCo"/>
-    <meta name="theme-color" content="#DD281B"/>
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Inicio &gt; RadioCo"/>
-    <meta name="twitter:site" content="@RadioCo_org"/>
-    <meta name="twitter:creator" content="@RadioCo_org"/>
-
     <!-- / Preload resources. -->
     <link rel="preload" href="{% static 'main/images/cascos_radioco.jpg' %}" as="image">
     <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" crossorigin="anonymous">
@@ -34,17 +13,20 @@
     <link rel="preload" href="{% static 'main/css/main.css' %}" as="style">
     <link rel='dns-prefetch' href='//fonts.googleapis.com'/>
 
+    {% block meta %}
+    {% include 'main/snippets/meta_tags.html' %}
+    {% endblock %}
 
     <link rel='stylesheet' id='illdy-google-fonts-css'
           href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700,300,300italic' type='text/css'
           media='all'/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
-    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" crossorigin="anonymous">
 
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script async src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
     <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">-->
     <!--<link href="http://radioco.org/wp-content/themes/illdy/layout/css/font-awesome.min.css?ver=4.5.0" rel="stylesheet">-->
@@ -142,14 +124,6 @@
         <!--ga('create', 'UA-15717007-3', 'radioco.org');-->
         <!--ga('send', 'pageview');-->
     <!--</script>-->
-    <meta name="title" content="Inicio | RadioCo"/>
-    <meta name="description" content="Broadcasting Radio Recording Scheduling System"/>
-    {% for lang_code, lang_name in languages %}
-        {% language lang_code %}
-            <link rel="alternate" href="{% url 'index' %}" hreflang="{{ lang_code }}"/>
-        {% endlanguage %}
-    {% endfor %}
-    <link rel="alternate" href="http://radioco.org/" hreflang="x-default"/>
 </head>
 <body class="home page-template-default page page-id-298 wp-custom-logo">
 
