--- a/backend/radioco/main/templates/main/installation.html
+++ b/backend/radioco/main/templates/main/installation.html
@@ -1,6 +1,16 @@
 {% extends 'main/base.html' %}
 {% load i18n staticfiles %}
 
+
+{% block meta %}
+
+{% trans "Discover how to setup Radioco" as meta_title %}
+{% trans "Follow this easy steps to get started." as meta_description %}
+{% include 'main/snippets/meta_tags.html' %}
+
+{% endblock %}
+
+
 {% block content %}
 
 {% get_current_language as LANGUAGE_CODE %}
