--- a/backend/radioco/main/templates/main/index.html
+++ b/backend/radioco/main/templates/main/index.html
@@ -5,7 +5,7 @@
 {% block meta %}
 
 {% trans "Get to know Radioco" as meta_title %}
-{% trans "RadioCo is a user-friendly system with an intuitive drag-and-drop interface." as meta_description %}
+{% trans "RadioCo is a radio management application suitable for community and commercial radios that makes easy scheduling, live recording and podcast publishing." as meta_description %}
 {% include 'main/snippets/meta_tags.html' %}
 
 {% endblock %}
