Translating and increasing page cache

--- a/backend/radioco/main/templates/main/index.html
+++ b/backend/radioco/main/templates/main/index.html
@@ -15,7 +15,7 @@
 
 {% include 'main/snippets/header.html' %}
 
-<section id="services" class="front-page-section">
+as<dsection id="services" class="front-page-section">
     <div class="section-header">
         <div class="container">
             <div class="row">
@@ -55,7 +55,7 @@
             </div><!--/.row-->
         </div><!--/.container-->
     </div><!--/.section-content-->
-</section><!--/#services.front-page-section-->
+</dsection><!--/#services.front-page-section-->
 
 {% include 'main/snippets/timeline.html' %}
 
