--- a/backend/radioco/main/templates/main/installation.html
+++ b/backend/radioco/main/templates/main/installation.html
@@ -4,7 +4,7 @@
 
 {% block meta %}
 
-{% trans "Discover how to setup Radioco" as meta_title %}
+{% trans "Discover how to setup RadioCo" as meta_title %}
 {% trans "Follow this easy steps to get started." as meta_description %}
 {% include 'main/snippets/meta_tags.html' %}
 
