--- a/backend/radioco/main/templates/main/base.html
+++ b/backend/radioco/main/templates/main/base.html
@@ -7,11 +7,18 @@
 <html lang="{{ LANGUAGE_CODE }}" prefix="og: http://ogp.me/ns#">
 <head>
     <!-- / Preload resources. -->
-    <link rel="preload" href="{% static 'main/images/cascos_radioco.jpg' %}" as="image">
+    <!--<link rel='preconnect' href='//fonts.googleapis.com' crossorigin="anonymous">-->
+    <!--<link rel='preconnect' href='//fonts.gstatic.com' crossorigin="anonymous">-->
+    <!--<link rel='dns-prefetch' href='//fonts.googleapis.com' crossorigin="anonymous">-->
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700,300,300italic" as="style" type='text/css' crossorigin="anonymous">
+    <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3ig4vwlxdu3cOWxw.woff2" as="font" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xKydSBYKcSV-LCoeQqfX1RYOo3iu4nwlxdu3cOWxw.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7lujVj9w.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/sourcesanspro/v11/6xKwdSBYKcSV-LCoeQqfX1RYOo3qPZZMkids18S0xR41.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" crossorigin="anonymous">
     <link rel="preload" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" as="style" crossorigin="anonymous">
     <link rel="preload" href="{% static 'main/css/main.css' %}" as="style">
-    <link rel='dns-prefetch' href='//fonts.googleapis.com'/>
+    <link rel="preload" href="{% static 'main/images/cascos_radioco.jpg' %}" as="image">
 
     {% block meta %}
     {% include 'main/snippets/meta_tags.html' %}
@@ -19,7 +26,7 @@
 
     <link rel='stylesheet' id='illdy-google-fonts-css'
           href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900,700,300,300italic' type='text/css'
-          media='all'/>
+          media='all' crossorigin="anonymous">
 
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
@@ -108,22 +115,24 @@
 
     <!--.pace-overlay {-->
         <!--background-color: #ffffff;-->
-    <!--}</style>&lt;!&ndash; Tracking code easily added by NK Google Analytics &ndash;&gt;-->
-    <!--<script defer type="text/javascript">-->
-        <!--(function (i, s, o, g, r, a, m) {-->
-            <!--i['GoogleAnalyticsObject'] = r;-->
-            <!--i[r] = i[r] || function () {-->
-                <!--(i[r].q = i[r].q || []).push(arguments)-->
-            <!--}, i[r].l = 1 * new Date();-->
-            <!--a = s.createElement(o),-->
-                <!--m = s.getElementsByTagName(o)[0];-->
-            <!--a.async = 1;-->
-            <!--a.src = g;-->
-            <!--m.parentNode.insertBefore(a, m)-->
-        <!--})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');-->
-        <!--ga('create', 'UA-15717007-3', 'radioco.org');-->
-        <!--ga('send', 'pageview');-->
-    <!--</script>-->
+    <!--}</style>&lt;!&ndash; -->
+
+    <!-- Tracking code easily added by NK Google Analytics -->
+    <script async type="text/javascript">
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-15717007-3', 'radioco.org');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body class="home page-template-default page page-id-298 wp-custom-logo">
 
@@ -173,10 +182,10 @@
 <!--<script defer type="text/javascript"-->
         <!--src='http://radioco.org/wp-content/plugins/uber-nocaptcha-recaptcha/js/recaptcha.js?ver=1.0'></script>-->
 <!--<script defer type="text/javascript" src='https://stats.wp.com/e-201803.js' async defer></script>-->
-<script defer type="text/javascript">
-    _stq = window._stq || [];
-    _stq.push(['view', {v: 'ext', j: '1:4.7.1', blog: '123290369', post: '298', tz: '1', srv: 'radioco.org'}]);
-    _stq.push(['clickTrackerInit', '123290369', '298']);
-</script>
+<!--<script defer type="text/javascript">-->
+    <!--_stq = window._stq || [];-->
+    <!--_stq.push(['view', {v: 'ext', j: '1:4.7.1', blog: '123290369', post: '298', tz: '1', srv: 'radioco.org'}]);-->
+    <!--_stq.push(['clickTrackerInit', '123290369', '298']);-->
+<!--</script>-->
 </body>
 </html>
