Improving setup & upgrading things

--- a/backend/radioco/main/templates/main/installation.html
+++ b/backend/radioco/main/templates/main/installation.html
@@ -66,8 +66,7 @@
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/radioco_git.jpg' %}');"></div>
                         <h5>
-                            <a href="https://colorlib.com/illdy/we-have-made-illdy-theme-seo-friendly/"
-                               title="We Have Made Illdy Theme SEO Friendly" class="post-title">
+                            <a href="https://github.com/iago1460/django-radio" class="post-title">
                                 Web app
                             </a>
                         </h5>
@@ -85,8 +84,7 @@
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/recorder_git.jpg' %}');"></div>
                         <h5>
-                            <a href="https://colorlib.com/illdy/stunning-one-page-wordpress-theme-masses/"
-                               title="Stunning One Page WordPress Theme For Masses" class="post-title">
+                            <a href="https://github.com/iago1460/django-radio-recorder" class="post-title">
                                 {% trans "Recorder software" %}
                             </a>
                         </h5>
@@ -104,14 +102,16 @@
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/radiocom_git.jpg' %}');"></div>
                         <h5>
-                            <a href="https://colorlib.com/illdy/hello-world/" title="Hello world!" class="post-title">
-                                Radiocom-Android
+                            <a href="https://github.com/ficiverson/radiocom-android" class="post-title">
+                                Radiocom Android
+                            </a> <a href="https://github.com/ficiverson/radiocom-flutter" class="post-title">
+                                Radiocom Flutter
                             </a>
                         </h5>
                         <div class="post-entry">
-                            {% trans "Third party Android application." %}
+                            {% trans "Mobile apps for Community Media Stations." %}
                         </div><!--/.post-entry-->
-                        <a href="https://github.com/ficiverson/radiocom-android" title="Read more" class="post-button">
+                        <a href="https://django-radio.readthedocs.io/en/latest/api/index.html#radiocom-api" title="Read more" class="post-button">
                             <i class="fab fa-github"></i> {% trans "Read more" %}
                         </a>
                     </div><!--/.post-->
