--- a/backend/radioco/main/templates/main/installation.html
+++ b/backend/radioco/main/templates/main/installation.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row blog-carousel">
 
-                <div class="illdy-blog-post col-md-4 col-sm-6 col-xs-12">
+                <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/radioco_git.jpg' %}');"></div>
@@ -79,7 +79,7 @@
                     </div><!--/.post-->
                 </div><!--/.col-sm-4-->
 
-                <div class="illdy-blog-post col-md-4 col-sm-6 col-xs-12">
+                <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/recorder_git.jpg' %}');"></div>
@@ -97,7 +97,7 @@
                     </div><!--/.post-->
                 </div><!--/.col-sm-4-->
 
-                <div class="illdy-blog-post col-md-4 col-sm-6 col-xs-12">
+                <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
                              style="background-image: url('{% static 'main/images/github/radiocom_git.jpg' %}');"></div>
@@ -116,6 +116,25 @@
                         </a>
                     </div><!--/.post-->
                 </div><!--/.col-sm-4-->
+
+                <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
+                    <div class="post" style="">
+                        <div class="post-image"
+                             style="background-image: url('{% static 'main/images/installation_steps/alexa.jpg' %}');"></div>
+                        <h5>
+                            <a href="https://github.com/iago1460/radioco-alexa" class="post-title">
+                                Radioco Alexa
+                            </a>
+                        </h5>
+                        <div class="post-entry">
+                            {% trans "Make your podcasts available in Alexa." %}
+                        </div><!--/.post-entry-->
+                        <a href="https://github.com/iago1460/radioco-alexa" title="Read more" class="post-button">
+                            <i class="fab fa-github"></i> {% trans "Read more" %}
+                        </a>
+                    </div><!--/.post-->
+                </div><!--/.col-sm-4-->
+
             </div><!--/.row-->
         </div><!--/.container-->
     </div><!--/.section-content-->
