--- a/backend/radioco/main/templates/main/articles/mejor_pfc_vii_edicion.html
+++ b/backend/radioco/main/templates/main/articles/mejor_pfc_vii_edicion.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <h2 class="blog-post-title">RadioCo consigue un accésit en la VII edición del Premio al mejor PFC con licencia libre</h2>
 
