--- a/backend/radioco/main/templates/main/articles/premio_chuza.html
+++ b/backend/radioco/main/templates/main/articles/premio_chuza.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <h2 class="blog-post-title">Premio en el Primer Certamen de aplicaciones libre Chuza</h2>
 
