--- a/backend/radioco/main/templates/main/articles/premio_concurso_proyectos_tecnologicos.html
+++ b/backend/radioco/main/templates/main/articles/premio_concurso_proyectos_tecnologicos.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <h2 class="blog-post-title">RadioCo recibe el premio del público y un segundo premio en el 14º Concurso de Proyectos Tecnológicos</h2>
 
