--- a/backend/radioco/main/templates/main/base.html
+++ b/backend/radioco/main/templates/main/base.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 
 {% get_available_languages as languages %}
 {% get_current_language as LANGUAGE_CODE %}
