--- a/backend/radioco/main/templates/main/snippets/contact.html
+++ b/backend/radioco/main/templates/main/snippets/contact.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 
 <section id="contact-us" class="front-page-section">
     <div class="section-header">
