--- a/backend/radioco/main/templates/main/snippets/header.html
+++ b/backend/radioco/main/templates/main/snippets/header.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles %}
+{% load i18n static %}
 
 <header id="header" class="header-front-page"
         style="background-image: url({% static 'main/images/cascos_radioco.jpg' %});background-attachment: fixed;">
