--- a/backend/radioco/main/templates/main/snippets/simple_header.html
+++ b/backend/radioco/main/templates/main/snippets/simple_header.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <header id="header" class="header-front-page" style="background-image: url({% static 'main/images/cascos_radioco.jpg' %});background-attachment: fixed;background-position: bottom;">
     {% include 'main/snippets/menu.html' %}
