--- a/backend/radioco/main/templates/main/about.html
+++ b/backend/radioco/main/templates/main/about.html
@@ -64,7 +64,7 @@
 
 
 <section class="front-page-section counter counter-alt"
-         style="background-image: url({% static 'main/images/panel_radioco.jpg' %});">
+         style="background-image: url({% static 'main/images/panel_radioco.avif' %});">
     <div class="counter-overlay"></div>
 </section><!--/#counter.front-page-section-->
 
