--- a/backend/radioco/main/templates/main/articles/mejor_pfc_vii_edicion.html
+++ b/backend/radioco/main/templates/main/articles/mejor_pfc_vii_edicion.html
@@ -13,15 +13,15 @@
             trabajo relacionado con las tecnologías de la información y la comunicación.</p>
         <p>En esta séptima edición participaron 15 proyectos, siendo 5 de ellos seleccionados como finalistas. Los
             ganadores fueron:<a
-                    href="{% static 'main/images/articles/IMG_20141017_184231-500x666.jpg' %}"
+                    href="{% static 'main/images/articles/IMG_20141017_184231-500x666.avif' %}"
                     data-rel="lightbox-gallery-CjKV" title=""><img data-attachment-id="141"
-                                                                   data-orig-file="{% static 'main/images/articles/IMG_20141017_184231-500x666.jpg' %}"
+                                                                   data-orig-file="{% static 'main/images/articles/IMG_20141017_184231-500x666.avif' %}"
                                                                    data-orig-size="500,666" data-comments-opened="1"
                                                                    data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}"
                                                                    data-image-title="IMG_20141017_184231-500&#215;666"
                                                                    data-image-description=""
                                                                    class="alignright wp-image-141 size-medium"
-                                                                   src="{% static 'main/images/articles/IMG_20141017_184231-500x666-225x300.jpg' %}"
+                                                                   src="{% static 'main/images/articles/IMG_20141017_184231-500x666-225x300.avif' %}"
                                                                    alt="IMG_20141017_184231-500x666"
                                                                    sizes="(max-width: 225px) 100vw, 225px"
                                                                    data-recalc-dims="1"/></a></p>
@@ -29,16 +29,16 @@
             software libre</em>. Este proyecto consistió en el desarrollo de un aplicativo para el sistema operativo
             Android, que ofrece cálculo multimodal de rutas en distintos medios de transporte público, a pie e en
             bicicleta con el objetivo de servir de herramienta de búsqueda de las mejores rutas.<a
-                    href="{% static 'main/images/articles/Presentacion-RadioCo.jpg' %}"
+                    href="{% static 'main/images/articles/Presentacion-RadioCo.avif' %}"
                     data-rel="lightbox-gallery-CjKV" title=""><img data-attachment-id="128"
                                                                    data-permalink="http://radioco.org/radioco-consigue-un-accesit-en-la-vii-edicion-del-premio-al-mejor-pfc-con-licencia-libre/presentacion-radioco/"
-                                                                   data-orig-file="{% static 'main/images/articles/Presentacion-RadioCo.jpg' %}"
+                                                                   data-orig-file="{% static 'main/images/articles/Presentacion-RadioCo.avif' %}"
                                                                    data-orig-size="500,666" data-comments-opened="1"
                                                                    data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}"
                                                                    data-image-title="Presentación RadioCo"
                                                                    data-image-description=""
                                                                    class="alignleft wp-image-128 size-medium"
-                                                                   src="{% static 'main/images/articles/Presentacion-RadioCo-225x300.jpg' %}"
+                                                                   src="{% static 'main/images/articles/Presentacion-RadioCo-225x300.avif' %}"
                                                                    alt="Presentación RadioCo"
                                                                    sizes="(max-width: 225px) 100vw, 225px"
                                                                    data-recalc-dims="1"/></a></p>
@@ -59,17 +59,17 @@
                 Linux, GPUL
             </li>
         </ul>
-        <p><a href="{% static 'main/images/articles/Xurado-Finalistas.jpg' %}"
+        <p><a href="{% static 'main/images/articles/Xurado-Finalistas.avif' %}"
               data-rel="lightbox-gallery-CjKV" title=""><img data-attachment-id="129"
-                                                             data-orig-file="{% static 'main/images/articles/Xurado-Finalistas.jpg' %}"
+                                                             data-orig-file="{% static 'main/images/articles/Xurado-Finalistas.avif' %}"
                                                              data-orig-size="500,310" data-comments-opened="1"
                                                              data-image-meta="{&quot;aperture&quot;:&quot;2.4&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;Nexus 5&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;1413569662&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;3.97&quot;,&quot;iso&quot;:&quot;432&quot;,&quot;shutter_speed&quot;:&quot;0.035961&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;1&quot;}"
                                                              data-image-title="Jurado y finalistas"
                                                              data-image-description=""
-                                                             data-medium-file="{% static 'main/images/articles/Xurado-Finalistas.jpg' %}"
-                                                             data-large-file="{% static 'main/images/articles/Xurado-Finalistas.jpg' %}"
+                                                             data-medium-file="{% static 'main/images/articles/Xurado-Finalistas.avif' %}"
+                                                             data-large-file="{% static 'main/images/articles/Xurado-Finalistas.avif' %}"
                                                              class="aligncenter wp-image-129 size-full"
-                                                             src="{% static 'main/images/articles/Xurado-Finalistas.jpg' %}"
+                                                             src="{% static 'main/images/articles/Xurado-Finalistas.avif' %}"
                                                              alt="Jurado y finalistas"
                                                              sizes="(max-width: 500px) 100vw, 500px"
                                                              data-recalc-dims="1"/></a></p>
