--- a/backend/radioco/main/templates/main/articles/premio_chuza.html
+++ b/backend/radioco/main/templates/main/articles/premio_chuza.html
@@ -11,12 +11,12 @@
         automática de la emisión en directo de una emisora de radio comunitaria con Software Libre y a Damián Aragunde
         Pérez por “Ok-Oh” una herramienta de ayuda a la audición mediante el uso de dispositivos móviles.<img
                 data-attachment-id="152"
-                data-orig-file="{% static 'main/images/articles/cartel_certame_aplicacions_chuza-aff1a.jpg' %}"
+                data-orig-file="{% static 'main/images/articles/cartel_certame_aplicacions_chuza-aff1a.avif' %}"
                 data-orig-size="420,595" data-comments-opened="1"
                 data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}"
                 data-image-title="cartel_certame_aplicacions_chuza-aff1a" data-image-description=""
                 class="size-medium wp-image-152 aligncenter"
-                src="{% static 'main/images/articles/cartel_certame_aplicacions_chuza-aff1a.jpg' %}"
+                src="{% static 'main/images/articles/cartel_certame_aplicacions_chuza-aff1a.avif' %}"
                 alt="cartel_certame_aplicacions_chuza-aff1a"
                 sizes="(max-width: 211px) 100vw, 211px" data-recalc-dims="1"/></p>
     <p>Links de interés: <a href="http://chuza.gl/story/resolucion-do-certame-aplicacions-libre-chuza" target="_blank">Resolución
