--- a/backend/radioco/main/templates/main/articles/premio_concurso_proyectos_tecnologicos.html
+++ b/backend/radioco/main/templates/main/articles/premio_concurso_proyectos_tecnologicos.html
@@ -21,15 +21,15 @@
         Informática de la Universidad de Vigo.</p>
 
 
-    <p><a href="{% static 'main/images/articles/jurado_y_concursantes.jpg' %}"
+    <p><a href="{% static 'main/images/articles/jurado_y_concursantes.avif' %}"
           data-rel="lightbox-gallery-AeVg" title=""><img data-attachment-id="182"
-                                                         data-orig-file="{% static 'main/images/articles/jurado_y_concursantes.jpg' %}"
+                                                         data-orig-file="{% static 'main/images/articles/jurado_y_concursantes.avif' %}"
                                                          data-orig-size="960,560" data-comments-opened="1"
                                                          data-image-meta="{&quot;aperture&quot;:&quot;0&quot;,&quot;credit&quot;:&quot;&quot;,&quot;camera&quot;:&quot;&quot;,&quot;caption&quot;:&quot;&quot;,&quot;created_timestamp&quot;:&quot;0&quot;,&quot;copyright&quot;:&quot;&quot;,&quot;focal_length&quot;:&quot;0&quot;,&quot;iso&quot;:&quot;0&quot;,&quot;shutter_speed&quot;:&quot;0&quot;,&quot;title&quot;:&quot;&quot;,&quot;orientation&quot;:&quot;0&quot;}"
                                                          data-image-title="jurado_y_concursantes"
                                                          data-image-description=""
                                                          class="wp-image-182 aligncenter"
-                                                         src="{% static 'main/images/articles/jurado_y_concursantes.jpg' %}"
+                                                         src="{% static 'main/images/articles/jurado_y_concursantes.avif' %}"
                                                          alt="jurado_y_concursantes"
                                                          sizes="(max-width: 640px) 100vw, 640px" data-recalc-dims="1"/></a>
     </p>
