--- a/backend/radioco/main/templates/main/index.html
+++ b/backend/radioco/main/templates/main/index.html
@@ -61,7 +61,7 @@
 
 
 <section id="counter" class="counter front-page-section"
-         style="background-image: url({% static 'main/images/esquema-proyecto.jpg' %});">
+         style="background-image: url({% static 'main/images/esquema-proyecto.avif' %});">
     <div class="counter-overlay"></div>
     <div class="container">
         <div class="row inline-columns">
