--- a/backend/radioco/main/templates/main/installation.html
+++ b/backend/radioco/main/templates/main/installation.html
@@ -36,7 +36,7 @@
 
 
 <section class="front-page-section counter counter-alt"
-         style="background-image: url({% static 'main/images/radioco_listen_to.png' %});">
+         style="background-image: url({% static 'main/images/radioco_listen_to.avif' %});">
     <div class="counter-overlay"></div>
 </section><!--/#counter.front-page-section-->
 
@@ -64,7 +64,7 @@
                 <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
-                             style="background-image: url('{% static 'main/images/github/radioco_git.jpg' %}');"></div>
+                             style="background-image: url('{% static 'main/images/github/radioco_git.avif' %}');"></div>
                         <h5>
                             <a href="https://github.com/iago1460/django-radio" class="post-title">
                                 Web app
@@ -82,7 +82,7 @@
                 <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
-                             style="background-image: url('{% static 'main/images/github/recorder_git.jpg' %}');"></div>
+                             style="background-image: url('{% static 'main/images/github/recorder_git.avif' %}');"></div>
                         <h5>
                             <a href="https://github.com/iago1460/django-radio-recorder" class="post-title">
                                 {% trans "Recorder software" %}
@@ -100,7 +100,7 @@
                 <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
-                             style="background-image: url('{% static 'main/images/github/radiocom_git.jpg' %}');"></div>
+                             style="background-image: url('{% static 'main/images/github/radiocom_git.avif' %}');"></div>
                         <h5>
                             <a href="https://github.com/ficiverson/radiocom-android" class="post-title">
                                 Radiocom Android
@@ -120,7 +120,7 @@
                 <div class="illdy-blog-post col-md-3 col-sm-6 col-xs-12">
                     <div class="post" style="">
                         <div class="post-image"
-                             style="background-image: url('{% static 'main/images/installation_steps/alexa.jpg' %}');"></div>
+                             style="background-image: url('{% static 'main/images/installation_steps/alexa.avif' %}');"></div>
                         <h5>
                             <a href="https://github.com/iago1460/radioco-alexa" class="post-title">
                                 Radioco Alexa
