--- a/backend/radioco/main/templates/main/snippets/elements/german_flag.html
+++ b/backend/radioco/main/templates/main/snippets/elements/german_flag.html
@@ -1,1 +1,1 @@
-<img alt="German Language" title="German Language" class="flag" src="http://radioco.org/wp-content/themes/illdy/layout/images/radioco/flags/de.png">
+<img alt="German Language" title="German Language" class="flag" src="{% static 'main/images/flags/de.avif' %}">
