--- a/backend/radioco/main/templates/main/snippets/elements/spanish_flag.html
+++ b/backend/radioco/main/templates/main/snippets/elements/spanish_flag.html
@@ -1,1 +1,1 @@
-<img alt="Spanish Language" title="Spanish Language" class="flag" src="http://radioco.org/wp-content/themes/illdy/layout/images/radioco/flags/es.png">
+<img alt="Spanish Language" title="Spanish Language" class="flag" src="{% static 'main/images/flags/es.avif' %}">
