--- a/backend/radioco/main/templates/main/snippets/footer.html
+++ b/backend/radioco/main/templates/main/snippets/footer.html
@@ -41,7 +41,7 @@
                     <div class="widget-title"><h3>{% trans "LICENSE" %}</h3></div>
                     <div class="textwidget"><p><a href="http://creativecommons.org/licenses/by/4.0/"><img
                             alt="Creative Commons License"
-                            src="{% static 'main/images/creativecommons4.png' %}"
+                            src="{% static 'main/images/creativecommons4.avif' %}"
                             data-recalc-dims="1"></a></p>
                         <p>
                             {% trans "This work by" %}
@@ -54,7 +54,7 @@
             </div><!--/.col-sm-3-->
             <div class="col-sm-3">
                 <a href="http://radioco.org/home" title="RadioCo" class="footer-logo"><img
-                        src="{% static 'main/images/radioco_80.png' %}" alt="RadioCo"
+                        src="{% static 'main/images/radioco_80.avif' %}" alt="RadioCo"
                         title="RadioCo"/></a>
                 <p class="copyright">
                     <span data-customizer="copyright-credit">
