--- a/backend/radioco/main/templates/main/snippets/header.html
+++ b/backend/radioco/main/templates/main/snippets/header.html
@@ -1,7 +1,7 @@
 {% load i18n static %}
 
 <header id="header" class="header-front-page"
-        style="background-image: url({% static 'main/images/cascos_radioco.jpg' %});background-attachment: fixed;">
+        style="background-image: url({% static 'main/images/cascos_radioco.avif' %});background-attachment: fixed;">
     {% include 'main/snippets/menu.html' %}
 
     <div class="bottom-header front-page">
