--- a/backend/radioco/main/templates/main/snippets/menu.html
+++ b/backend/radioco/main/templates/main/snippets/menu.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-2 col-xs-8">
 
-                <a href="{% url 'index' %}"><img alt="RadioCo Logo" src="{% static 'main/images/radioco_small.png' %}"/></a>
+                <a href="{% url 'index' %}"><img alt="RadioCo Logo" src="{% static 'main/images/radioco_small.avif' %}"/></a>
             </div><!--/.col-sm-2-->
             <div class="col-sm-10 col-xs-4">
                 <nav class="header-navigation">
