--- a/backend/radioco/main/templates/main/snippets/simple_header.html
+++ b/backend/radioco/main/templates/main/snippets/simple_header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<header id="header" class="header-front-page" style="background-image: url({% static 'main/images/cascos_radioco.jpg' %});background-attachment: fixed;background-position: bottom;">
+<header id="header" class="header-front-page" style="background-image: url({% static 'main/images/cascos_radioco.avif' %});background-attachment: fixed;background-position: bottom;">
     {% include 'main/snippets/menu.html' %}
 
     <div class="bottom-header blog">
